fix module access in order to access Truffle Nodes outside of a language context